css/styles.css
body {
  font-family: "Roboto", sans-serif;
  color: #434455;
  background-color: #fff;
}

/* reset */

ul,
ol {
  list-style-type: none;
  margin-block: 0;
  padding-left: 0;
}

h1,
h2,
h3,
h4,
h5,
h6,
p {
  margin-block: 0;
}

a {
  text-decoration: none;
  color: inherit;
}

address {
  font-style: normal;
}

button {
  font-family: inherit;
  cursor: pointer;
}

img {
  display: block;
  max-width: 100%;
  height: auto;
}

.visually-hidden {
  position: absolute;
  width: 1px;
  height: 1px;
  margin: -1px;
  border: 0;
  padding: 0;

  white-space: nowrap;
  clip-path: inset(100%);
  clip: rect(0 0 0 0);
  overflow: hidden;
}

/* common */

.container {
  max-width: 1128px;
  padding: 0;
  margin: 0 auto;
}

/*----------- header -----------*/

.page-header {
  border-bottom: 1px solid #e7e9fc;
  max-width: 1440px;
  margin: 0 auto;
}

.header-container {
  display: flex;
  align-items: center;
}

.header-nav {
  display: flex;
  align-items: center;
}

.contacts {
  margin-left: auto;
}

.contacts-list {
  display: flex;
  align-items: center;
  gap: 40px;
  padding: 24px 0;
}

.logo {
  font-family: "Raleway", sans-serif;
  font-weight: 700;
  font-size: 18px;
  line-height: 1.17;
  letter-spacing: 0.03em;
  text-transform: uppercase;
  color: #4d5ae5;
}

.header-logo {
  padding: 24px 0;
  margin-right: 76px;
}

.header-logo .logo-part {
  color: #2e2f42;
}

.footer-logo .logo-part {
  color: #f4f4fd;
}

.nav-list {
  display: flex;
  align-items: center;
  gap: 40px;
}

.nav-link {
  padding: 24px 0;
  font-weight: 500;
  font-size: 16px;
  line-height: 1.5;
  letter-spacing: 0.02em;
  color: #2e2f42;
}

.contacts-link {
  font-size: 16px;
  line-height: 1.5;
  letter-spacing: 0.02em;
  color: #434455;
}

.nav-link:hover,
.nav-link:focus,
.contacts-link:hover,
.contacts-link:focus {
  color: #404bbf;
}

/*------------ hero ------------*/

.hero {
  background-color: #2e2f42;
}

.hero-title {
  font-weight: 700;
  font-size: 56px;
  line-height: 1.07;
  letter-spacing: 0.02em;
  text-align: center;
  max-width: 496px;
  color: #fff;
}

.hero-wrapper {
  padding-top: 188px;
  display: flex;
  flex-direction: column;
  align-items: center;
}

.hero-button {
  font-weight: 500;
  font-size: 16px;
  border-radius: 4px;
  padding: 16px 32px;
  min-width: 169px;
  line-height: 1.5;
  letter-spacing: 0.04em;
  color: #fff;
  background-color: #4d5ae5;
  border: none;
}

.hero-buttons {
  display: flex;
  padding-bottom: 188px;
  justify-content: center;
  margin-top: 48px;
}

.hero-button:hover,
.hero-button:focus {
  background-color: #404bbf;
}

/*------------ features ------------*/

.features-list {
  display: flex;
  gap: 24px;
  padding: 120px 0;
}

.features-item {
  width: calc((100% - 72px) / 4);
}

.features-item-title {
  font-weight: 500;
  font-size: 20px;
  line-height: 1.2;
  letter-spacing: 0.02em;
  color: #2e2f42;
  margin-bottom: 8px;
}

.features-item-text {
  font-size: 16px;
  line-height: 1.5;
  letter-spacing: 0.02em;
  color: #434455;
}

/*------------ team  -------------*/

.team {
  background-color: #f4f4fd;
}

.team-subtitle {
  font-weight: 700;
  font-size: 36px;
  line-height: 1.11;
  letter-spacing: 0.02em;
  text-align: center;
  color: #2e2f42;
  margin-bottom: 72px;
  padding-top: 120px;
}

.team-list {
  display: flex;
  gap: 24px;
}

.team-item {
  background-color: #fff;
  width: calc((100% - 72px) / 4);
  margin-bottom: 120px;
  border-radius: 0 0 4px 4px;
  padding: 0px 0px 32px;
}

.person-card {
  padding-bottom: 32px;
}

.team-card-title {
  font-weight: 500;
  font-size: 20px;
  line-height: 1.2;
  letter-spacing: 0.02em;
  text-align: center;
  color: #2e2f42;
  margin-bottom: 8px;
  margin-top: 32px;
}

.team-card-text {
  font-size: 16px;
  line-height: 1.5;
  letter-spacing: 0.02em;
  text-align: center;
  color: #434455;
}

/*------------ portfolio ------------*/

.portfolio-subtitle {
  font-weight: 700;
  font-size: 36px;
  line-height: 1.11;
  letter-spacing: 0.02em;
  text-align: center;
  color: #2e2f42;
  margin-bottom: 72px;
  padding-top: 120px;
}

.portfolio-list {
  display: flex;
  gap: 24px;
  flex-wrap: wrap;
  margin: 48px;
  background-color: #fff;
  padding-bottom: 120px;
}

.portfolio-item {
  width: calc((100% - 48px) / 3);
}

.portfolio-item-title {
  font-weight: 500;
  font-size: 20px;
  line-height: 1.2;
  letter-spacing: 0.02em;
  color: #2e2f42;
  padding-top: 32px;
  margin-bottom: 8px;
}

.portfolio-item-text {
  font-size: 16px;
  line-height: 1.5;
  letter-spacing: 0.02em;
  color: #434455;
  padding-bottom: 32px;
}

.portfolio-name {
  margin-bottom: 48px;
  border-bottom: 1px solid #e7e9fc;
  border-left: 1px solid #e7e9fc;
  border-right: 1px solid #e7e9fc;
  padding: 32px 16px;
}

/*------------ footer ------------*/

.page-footer {
  background-color: #2e2f42;
}

.footer-logo {
  display: inline-block;
  margin-bottom: 16px;
}

.footer-text {
  font-size: 16px;
  line-height: 1.5;
  letter-spacing: 0.02em;
  color: #f4f4fd;
  max-width: 264px;
}

.footer-container {
  padding-top: 100px;
  padding-left: 156px;
  padding-bottom: 100px;
}

